src/BRIDGE_Connection/logs/KP_test-HW_5430532.err
Traceback (most recent call last):
  File "/home/kp779/BRIDGE_Connection/src/BRIDGE_Connection/compliance.py", line 7, in <module>
    from init import *
  File "/home/kp779/BRIDGE_Connection/src/BRIDGE_Connection/init.py", line 36
    return near(x[0], 0.0) and (0.0 <= x[0]] <=2.0)
                                           ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
